overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: demo
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
